- API: DockController can tell which Component is child (in the logic of the dock-tree) of which Dockable. Scheme can be influenced by clients through DockController#putRepresentative.
- Layout, API: DockStations have to decide whether a child can be accepted or not, the DockRelocator no longer does this. That gives more flexibility.
- API: MovingTitleGetter replaced by DockableMovingImageFactory, gives more flexibility
- Layout: FlatTheme now shows a screencapture of the Dockable that is moved by the user instead of the DockTitle
- Bugfix: The method "drop" on many DockStations did not ensure that the tree gets no cycles
- Bugfix: MultiDockActionSource added the wrong listener to its children, the effect was that some updates were lost
- Bugfix: SplitDockStation: full-screen elements not properly removed on drag-operation.
- API: new SplitDockPathProperty, allows to store the location of a child of a SplitDockStation. Replaces SplitDockProperty whenever possible, but the SplitDockProperty remains a valid way to describe the boundaries of a Dockable.
- Bugfix: DockUtilities.isAnchestor failed when the anchestor was a ScreenDockStation
- Bugfix: Memoryleak in ButtonPanel
- Bugfix: ButtonPanel did not show all visualisations if a DockAction occurred more than once in the DockActionSource
- Bugfix: MenuMenuHandler could create a memoryleak by not properly unbinding the visualization of a DockAction
- API: ComponentHierarchyObserver collects all Components which are used in the realm of a specific DockController
- Bugfix: empty SplitDockStation could throw NullPointerException during drag&drop operation
- API: removed the necessity to create GlassedPane's in a restricted environment manually
- API: extensive reorganisation of packages in order to let the important classes/interfaces be in the top-level packages
! API: OverpaintablePanel, using a "base" and a "content"-pane, calls to "setContentPane" now have to be replaced by "setBasePane"